contrast fix

--- a/variables.css
+++ b/variables.css
@@ -7,7 +7,7 @@
   --primary-color-hover: #4366e8;
 
   /* Background colors (Application, elements and windows) */
-  --primary-background-color: #1d1d1d;
+  --primary-background-color: #242424;
   --secondary-background-color: #17181a;
 
   /* Fonts */
